--- a/css/responsive.css
+++ b/css/responsive.css
@@ -42,9 +42,12 @@
         top: 0;
         position: fixed;
         box-shadow: 0 28rem 79rem 0 rgba(91, 194, 182, .08), 0 40rem 32rem 0 rgba(0, 0, 0, .04);
+        border-bottom: 3px solid rgb(164, 38, 44);
     }
     #banner #logo {
-        display: none;
+        height: 100%;
+        width: 100%;
+        background: none;
     }
     #menu-toggle {
         position: absolute;
@@ -69,13 +72,14 @@
     }
     button.menu-item:hover {
         color: #fff;
-        background-color: rgb(118, 23, 33);
+        background-color: rgb(164, 38, 44);
     }
     button.menu-item:active {
         font-size: 1.1em;
     }
     nav#menu {
         width: 30vw;
+        max-width: 200px;
         height: 100vh;
         top: 0;
         left: -30vw;
@@ -84,6 +88,8 @@
         position: fixed;
         z-index: 2;
         transition: all 130ms ease;
+        background-color: #fff;
+        border: none;
     }
     #menu-toggle {
         display: block;
@@ -127,6 +133,7 @@
     #intro-image,
     .list,
     .links {
+        width: 40vw;
         max-width: 550px;
     }
     .list>ul {
